--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
+table,
+th,
+td {
+  border: 1px solid;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+td {
+  text-align: center;
+  height: 50px;
+  vertical-align: middle;
+}
+
+th {
+  background-color: #61dafb;
+  color: white;
+}
+
+tr:hover {
+  background-color: rgb(159, 168, 248);
+}
+
 .App {
   text-align: center;
 }
