--- a/src/App.css
+++ b/src/App.css
@@ -21,25 +21,66 @@ th {
 }
 
 tr:hover {
-  background-color: rgb(159, 168, 248);
+  background-color: rgb(54, 71, 226);
 }
 
 input[type="text"] {
-  padding: 10px;
+  padding: 1rem, 0.5rem;
   margin: 10px 0;
 }
 
 .link {
   margin: 1rem;
+  background-color: #715bee;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.login-form {
+  max-width: 500px;
+  border: 1px solid blue;
+  margin: 2rem auto;
+  padding: 2rem;
+}
+
+.form-created {
+  max-width: 500px;
+  border: 1px solid blue;
+  margin: 2rem auto;
+  padding: 2rem;
+}
+
+h1 {
+  text-align: center;
+}
+
+button,
+#submit {
+  border: 1px solid blue;
+  padding: 1rem;
+  width: auto;
+  cursor: pointer;
+  display: block;
+  margin: 0.25rem auto;
+}
+
+button:hover {
+  background: rgb(142, 152, 241);
+}
+
+select {
+  width: 100%;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
 }
 
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -70,8 +111,4 @@ input[type="text"] {
   to {
     transform: rotate(360deg);
   }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
 }
